드디어 눈물의 그래프가 등장했습니다. 수정할 부분이 많지만 그렇습니다..

--- a/src/components/forecast/chart.css
+++ b/src/components/forecast/chart.css
@@ -1,6 +1,6 @@
 .chartWrapper {
   position: relative;
-  /* overflow-x: scroll; */
+  overflow-x: auto;
   overflow-y: hidden;
 }
 
@@ -10,7 +10,9 @@
 }
 
 .chartAreaWrapper {
-  /* width: 600px; */
+  width: 1000px;
   /* width: 150vw; */
-  height: 30vh;
+  /* height: 30vh; */
+  height: 500px;
+  margin: 0 auto;
 }
