--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -4,6 +4,7 @@
 }
 
 .chart__header > h1 {
+  text-align: center;
   margin-bottom: -0.5rem;
 }
 
@@ -12,7 +13,8 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-  margin: -2.5rem;
+  margin-top: -1.5rem;
+  margin-bottom: -2.5rem;
 }
 
 .chart__headerBottom {
