--- a/src/components/forecast/chart.css
+++ b/src/components/forecast/chart.css
@@ -15,13 +15,23 @@
 }
 
 .chartAreaWrapper {
+  position: relative;
   width: 1300px;
+  /* width: 100rem; */
   height: 350px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .chartIcons {
+  display: flex;
   position: absolute;
-  padding-left: 20px;
-  padding-top: 60px;
+  justify-content: space-between;
+  top: 40px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: min-content;
+  padding-top: 20px;
+  padding-left: 16px;
+  background-color: white;
 }
