--- a/src/components/forecast/chart.css
+++ b/src/components/forecast/chart.css
@@ -33,5 +33,5 @@
   height: min-content;
   padding-top: 20px;
   padding-left: 16px;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
 }
