--- a/src/components/daily/DayInfo.css
+++ b/src/components/daily/DayInfo.css
@@ -3,9 +3,11 @@ p {
   font-weight: 600;
 }
 .dayInfo__box {
+  width: 70%;
   border-bottom: 1px solid black;
-  padding-left: 30px;
-  padding-right: 30px;
+  /* padding-left: 30px;
+  padding-right: 30px; */
+  margin: 0 auto;
 }
 
 .dayInfo {
@@ -15,30 +17,51 @@ p {
   justify-content: space-between;
 }
 
-.icon__humidity {
+.day {
+  flex: 0.15;
+  padding-left: 2rem;
+}
+
+.icon__rain {
+  flex: 0.3;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.icon__humidity > p {
+.icon__rain > p {
+  width: 3rem;
   margin-left: 1.5rem;
   color: skyblue;
 }
 
+.wind {
+  flex: 0.15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wind > p {
+  margin-left: 0.5rem;
+  color: skyblue;
+}
 .temps {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
-  width: 5rem;
+  justify-content: center;
+  /* width: 5rem; */
+  margin-right: 1rem;
 }
 
 .temps > .max {
+  width: 1.5rem;
   color: red;
 }
 
 .temps > .min {
+  width: 1.5rem;
   color: blue;
 }
 
