--- a/src/components/daily/DayInfo.css
+++ b/src/components/daily/DayInfo.css
@@ -3,11 +3,10 @@ p {
   font-weight: 600;
 }
 .dayInfo__box {
-  width: 70%;
   border-bottom: 1px solid black;
-  /* padding-left: 30px;
-  padding-right: 30px; */
-  margin: 0 auto;
+  margin-left: 50px;
+  margin-right: 50px;
+  /* margin: 0 auto; */
 }
 
 .dayInfo {
