--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -13,8 +13,8 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-  margin-top: -1.5rem;
-  margin-bottom: -2rem;
+  /* margin-top: -1.5rem; */
+  /* margin-bottom: -2rem; */
 }
 
 .chart__headerMiddle > p {
