--- a/src/components/forecast/chart.css
+++ b/src/components/forecast/chart.css
@@ -2,7 +2,8 @@
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
-  border: 1px solid black;
+  background-color: #e0f7fa;
+  border: 0.5px solid black;
 }
 
 .chartWrapper > p {
@@ -33,5 +34,5 @@
   height: min-content;
   padding-top: 20px;
   padding-left: 16px;
-  background-color: rgb(250, 250, 250);
+  background-color: #e0f7fa;
 }
