--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .Header {
   height: 5rem;
   position: relative;
-  background-color: aquamarine;
+  background-color: #aebfbe;
 }
 .Header > h1 {
   margin: 0;
