--- a/src/components/forecast/chart.css
+++ b/src/components/forecast/chart.css
@@ -2,9 +2,7 @@
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
-  background-color: #e0f7fa;
-  /* border: 0.5px solid black; */
-  margin: 10px;
+  background-color: #f5f5f5;
   border-style: solid;
   border-image: linear-gradient(to right, #01c9ca 0%, #3886ff 100%);
   border-image-slice: 1;
@@ -39,5 +37,5 @@
   height: min-content;
   padding-top: 20px;
   padding-left: 16px;
-  background-color: #e0f7fa;
+  background-color: #f5f5f5;
 }
