--- a/src/theme/Address.css
+++ b/src/theme/Address.css
@@ -10,9 +10,11 @@
   border: none;
   outline-width: 0;
   width: 100%;
+  height: 90%;
   font-size: 1rem;
+  font-weight: 600;
   margin-top: 5px;
-  padding: 3px;
+  /* padding: 3px; */
   padding-left: 5px;
 }
 
@@ -24,5 +26,6 @@
   padding-left: 5px;
   color: black;
   border-bottom: 1px solid black;
+  font-weight: 700;
   z-index: 100;
 }
