--- a/src/theme/Address.css
+++ b/src/theme/Address.css
@@ -7,7 +7,7 @@
 }
 
 .address__input > input {
-  border: none;
+  border: 1px solid black;
   outline-width: 0;
   width: 100%;
   height: 90%;
@@ -24,6 +24,7 @@
   background-color: rgb(203, 207, 138);
   padding: 2px;
   padding-left: 5px;
+  padding-right: 4px;
   color: black;
   border-bottom: 1px solid black;
   font-weight: 700;
