--- a/src/theme/Daily.css
+++ b/src/theme/Daily.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-size: 2rem;
   font-weight: 800;
-  background-color: #e8e3bc;
+  /* background-color: #e8e3bc; */
   padding: 5px;
 }
 
