--- a/src/theme/DayInfo.css
+++ b/src/theme/DayInfo.css
@@ -3,10 +3,10 @@ p {
   font-weight: 600;
 }
 .dayInfo__box {
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
   margin-left: 70px;
   margin-right: 70px;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
 }
 
 .dayInfo {
@@ -42,7 +42,7 @@ p {
 }
 
 .wind__box > p {
-  color: #2ba7fa;
+  /* color: #2ba7fa; */
 }
 .temps__box {
   display: flex;
@@ -63,9 +63,9 @@ p {
 }
 
 .temp > .max {
-  color: red;
+  /* color: red; */
 }
 
 .temp > .min {
-  color: blue;
+  /* color: blue; */
 }
