--- a/src/theme/DayInfo.css
+++ b/src/theme/DayInfo.css
@@ -2,6 +2,17 @@ p {
   font-size: medium;
   font-weight: 600;
 }
+.dailyIcon {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+@media screen and (max-width: 768px) {
+  .dailyIcon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
 .dayInfo__box {
   /* border-bottom: 1px solid black; */
   margin-left: 70px;
