--- a/src/theme/App.css
+++ b/src/theme/App.css
@@ -1,9 +1,21 @@
-.address {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.dailyIcon {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-.address > p {
-  font-size: 1.2rem;
+.forecastIcon {
+  width: 7rem;
+  height: 7rem;
+  margin-right: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .dailyIcon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  .forecastIcon {
+    width: 5rem;
+    height: 5rem;
+  }
 }
