--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -7,5 +7,5 @@ body {
   font-family: "Noto Sans KR", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f1eefd;
+  /* background-color: #f1eefd; */
 }
