--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -2,6 +2,14 @@
 * {
   margin: 0;
 }
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.7em;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  border-radius: 8;
+}
 body {
   margin: 0;
   font-family: "Noto Sans KR", sans-serif;
